Second attempt to fix layout shift on mobile navbar

--- a/app/static/master.css
+++ b/app/static/master.css
@@ -494,7 +494,7 @@ select {font-family: Inter-Regular;}
 	margin: 0;
 	list-style: none;
 	line-height: 36px !important;
-	transition: all 1s cubic-bezier(.325, 1, .22, 1);
+	transition: none;
 	width: 100%;
 }
 .mobile-dropdown input[type=checkbox]:checked ~ div section {
